--- a/Oksman_Kassa/Oksman_Kassa.csproj
+++ b/Oksman_Kassa/Oksman_Kassa.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kvitto.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="NyKund.cs" />
+    <Compile Include="Produkt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
