--- a/Oksman_Kassa/Oksman_Kassa.csproj
+++ b/Oksman_Kassa/Oksman_Kassa.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KassaItem.cs" />
     <Compile Include="Kvitto.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="NyKund.cs" />
